--- a/TelloTest/Base.lproj/Main.storyboard
+++ b/TelloTest/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina5_9" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,163 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TelloTest" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Ca-z9-XIC">
+                                <rect key="frame" x="7" y="109" width="51" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Takeoff"/>
+                                <connections>
+                                    <action selector="tapTakeoff:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5Nz-ci-Yr2"/>
+                                </connections>
+                            </button>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8ZV-MA-B0i">
+                                <rect key="frame" x="10" y="147" width="34" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Land"/>
+                                <connections>
+                                    <action selector="tapLand:" destination="BYZ-38-t0r" eventType="touchUpInside" id="OKD-PR-Anf"/>
+                                </connections>
+                            </button>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="10" minValue="1" maxValue="30" translatesAutoresizingMaskIntoConstraints="NO" id="2Ts-gM-bOo">
+                                <rect key="frame" x="14" y="391" width="347" height="31"/>
+                                <connections>
+                                    <action selector="changeAltSlider:" destination="BYZ-38-t0r" eventType="valueChanged" id="Oky-AM-dgy"/>
+                                </connections>
+                            </slider>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pd1-RS-63x">
+                                <rect key="frame" x="87.666666666666686" y="461" width="200" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="6Bh-kd-e21"/>
+                                    <constraint firstAttribute="width" constant="200" id="DLJ-03-b2O"/>
+                                </constraints>
+                                <state key="normal" title="Send value to Tello" backgroundImage="button_bigP.png">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="tapChangeAltLimit:" destination="BYZ-38-t0r" eventType="touchUpInside" id="jbX-Af-o7g"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Current Altitude Limit: --m" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="aEx-MM-yEq">
+                                <rect key="frame" x="53" y="99" width="270" height="80"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="80" id="6hv-fz-04g"/>
+                                    <constraint firstAttribute="width" constant="270" id="W5N-9F-ZZT"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fXV-va-NSx">
+                                <rect key="frame" x="37.666666666666657" y="209" width="300" height="80"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="80" id="Vmd-9c-pXJ"/>
+                                    <constraint firstAttribute="width" constant="300" id="WVX-Ud-tJS"/>
+                                </constraints>
+                                <string key="text" base64-UTF8="YES">
+MS5TbGlkZSB0aGUgc2VlayBiYXIuERERERERERENMi5UYXAgW1NlbmQgdmFsdWUgdG8gVGVsbG9dA
+</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="c2R-kw-LZc">
+                                <rect key="frame" x="87.666666666666686" y="708" width="200" height="41"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="d4H-Pb-neV"/>
+                                    <constraint firstAttribute="height" constant="40" id="zDE-dT-aSj"/>
+                                </constraints>
+                                <segments>
+                                    <segment title="Meter"/>
+                                    <segment title="Imperial"/>
+                                </segments>
+                                <connections>
+                                    <action selector="changeUnitType:" destination="BYZ-38-t0r" eventType="valueChanged" id="3dg-Am-VBM"/>
+                                </connections>
+                            </segmentedControl>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-- m" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LPo-j0-dWV">
+                                <rect key="frame" x="87.666666666666686" y="326" width="200" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="Ujc-89-fO9"/>
+                                    <constraint firstAttribute="height" constant="30" id="bZo-i0-zBX"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Dv-Vk-jBp">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                <color key="backgroundColor" red="0.0" green="0.46666666666666667" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TelloAltLimitSetter" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IMb-7v-o9n">
+                                <rect key="frame" x="0.0" y="44" width="375" height="45"/>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="bHm-Hf-9ye"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please connect to Tello's wi-fi." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ePg-cg-Ufn">
+                                <rect key="frame" x="10" y="189" width="355" height="80"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="80" id="dp6-0t-wDp"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="LPo-j0-dWV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="3Tj-FR-O8b"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="c2R-kw-LZc" secondAttribute="bottom" constant="30" id="41Q-YB-IAr"/>
+                            <constraint firstItem="pd1-RS-63x" firstAttribute="top" secondItem="2Ts-gM-bOo" secondAttribute="bottom" constant="40" id="42I-lX-Ia8"/>
+                            <constraint firstAttribute="trailing" secondItem="4Dv-Vk-jBp" secondAttribute="trailing" id="55N-1M-eUA"/>
+                            <constraint firstItem="2Ts-gM-bOo" firstAttribute="top" secondItem="LPo-j0-dWV" secondAttribute="bottom" constant="35" id="55W-TX-fzj"/>
+                            <constraint firstItem="aEx-MM-yEq" firstAttribute="top" secondItem="IMb-7v-o9n" secondAttribute="bottom" constant="10" id="79k-9O-9u7"/>
+                            <constraint firstItem="4Dv-Vk-jBp" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="9Sb-SO-f9F"/>
+                            <constraint firstItem="fXV-va-NSx" firstAttribute="top" secondItem="aEx-MM-yEq" secondAttribute="bottom" constant="30" id="MVa-hi-FlI"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ePg-cg-Ufn" secondAttribute="trailing" constant="10" id="N27-Kd-he0"/>
+                            <constraint firstItem="2Ts-gM-bOo" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Nmp-Bj-NDi"/>
+                            <constraint firstItem="IMb-7v-o9n" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Q03-bS-Gy2"/>
+                            <constraint firstItem="c2R-kw-LZc" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="R23-S2-ECL"/>
+                            <constraint firstItem="pd1-RS-63x" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Uyo-u4-L0L"/>
+                            <constraint firstItem="IMb-7v-o9n" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="WX8-5u-tu5"/>
+                            <constraint firstItem="aEx-MM-yEq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bsV-gz-tDf"/>
+                            <constraint firstItem="IMb-7v-o9n" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="fVg-gj-T3w"/>
+                            <constraint firstItem="2Ts-gM-bOo" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="foJ-9j-Bm8"/>
+                            <constraint firstItem="ePg-cg-Ufn" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="lIh-RD-6I4"/>
+                            <constraint firstItem="fXV-va-NSx" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ocF-vS-m7p"/>
+                            <constraint firstItem="2Ts-gM-bOo" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="qfW-1x-PSd"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="2Ts-gM-bOo" secondAttribute="trailing" constant="16" id="r4c-nt-Ddn"/>
+                            <constraint firstItem="ePg-cg-Ufn" firstAttribute="top" secondItem="aEx-MM-yEq" secondAttribute="bottom" constant="10" id="uPl-hC-4KL"/>
+                            <constraint firstItem="4Dv-Vk-jBp" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="vmc-UI-NEm"/>
+                            <constraint firstItem="IMb-7v-o9n" firstAttribute="top" secondItem="4Dv-Vk-jBp" secondAttribute="bottom" id="xY2-8Y-vaR"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="_buttonSend" destination="pd1-RS-63x" id="Cdk-KZ-IPb"/>
+                        <outlet property="_labelAlart" destination="ePg-cg-Ufn" id="IvK-aZ-Ywo"/>
+                        <outlet property="_labelCurrentAlt" destination="aEx-MM-yEq" id="6GA-Xs-YKU"/>
+                        <outlet property="_labelNewAlt" destination="LPo-j0-dWV" id="R3c-r8-GuF"/>
+                        <outlet property="_labelUsage" destination="fXV-va-NSx" id="ri2-HU-u6n"/>
+                        <outlet property="_segUnitType" destination="c2R-kw-LZc" id="3TX-1M-b5b"/>
+                        <outlet property="_sliderAlt" destination="2Ts-gM-bOo" id="M6h-oc-2da"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="133.00492610837438"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="button_bigP.png" width="150" height="40"/>
+    </resources>
 </document>
