--- a/TelloTest/Base.lproj/Main.storyboard
+++ b/TelloTest/Base.lproj/Main.storyboard
@@ -41,7 +41,7 @@
                                 </connections>
                             </slider>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pd1-RS-63x">
-                                <rect key="frame" x="87.666666666666686" y="461" width="200" height="50"/>
+                                <rect key="frame" x="87" y="511" width="200" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="6Bh-kd-e21"/>
                                     <constraint firstAttribute="width" constant="200" id="DLJ-03-b2O"/>
@@ -77,7 +77,7 @@ MS5TbGlkZSB0aGUgc2VlayBiYXIuERERERERERENMi5UYXAgW1NlbmQgdmFsdWUgdG8gVGVsbG9dA
                                 <nil key="highlightedColor"/>
                             </label>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="c2R-kw-LZc">
-                                <rect key="frame" x="87.666666666666686" y="708" width="200" height="41"/>
+                                <rect key="frame" x="87" y="441" width="200" height="41"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="200" id="d4H-Pb-neV"/>
                                     <constraint firstAttribute="height" constant="40" id="zDE-dT-aSj"/>
@@ -115,10 +115,42 @@ MS5TbGlkZSB0aGUgc2VlayBiYXIuERERERERERENMi5UYXAgW1NlbmQgdmFsdWUgdG8gVGVsbG9dA
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please connect to Tello's wi-fi." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ePg-cg-Ufn">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ePg-cg-Ufn">
                                 <rect key="frame" x="10" y="189" width="355" height="80"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="80" id="dp6-0t-wDp"/>
+                                </constraints>
+                                <string key="text">Please connect to Tello's wi-fi.
+And, please kill the Tello app.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="LKp-Yt-PcO">
+                                <rect key="frame" x="62" y="738" width="250" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="gC6-H5-Ub8"/>
+                                    <constraint firstAttribute="width" constant="250" id="tAZ-dI-Ld5"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="qcq-nn-yqr">
+                                <rect key="frame" x="63" y="668" width="250" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="2d9-p6-ZC8"/>
+                                    <constraint firstAttribute="width" constant="250" id="bVu-B2-uzq"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="24G-22-zs0">
+                                <rect key="frame" x="62.666666666666657" y="703" width="249.99999999999997" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="250" id="ZOo-kD-tPT"/>
+                                    <constraint firstAttribute="height" constant="30" id="sYK-56-7oi"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <nil key="textColor"/>
@@ -127,13 +159,16 @@ MS5TbGlkZSB0aGUgc2VlayBiYXIuERERERERERENMi5UYXAgW1NlbmQgdmFsdWUgdG8gVGVsbG9dA
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="LKp-Yt-PcO" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="2j4-zM-jk6"/>
                             <constraint firstItem="LPo-j0-dWV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="3Tj-FR-O8b"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="c2R-kw-LZc" secondAttribute="bottom" constant="30" id="41Q-YB-IAr"/>
-                            <constraint firstItem="pd1-RS-63x" firstAttribute="top" secondItem="2Ts-gM-bOo" secondAttribute="bottom" constant="40" id="42I-lX-Ia8"/>
                             <constraint firstAttribute="trailing" secondItem="4Dv-Vk-jBp" secondAttribute="trailing" id="55N-1M-eUA"/>
                             <constraint firstItem="2Ts-gM-bOo" firstAttribute="top" secondItem="LPo-j0-dWV" secondAttribute="bottom" constant="35" id="55W-TX-fzj"/>
+                            <constraint firstItem="24G-22-zs0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="676-yl-ZbM"/>
                             <constraint firstItem="aEx-MM-yEq" firstAttribute="top" secondItem="IMb-7v-o9n" secondAttribute="bottom" constant="10" id="79k-9O-9u7"/>
                             <constraint firstItem="4Dv-Vk-jBp" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="9Sb-SO-f9F"/>
+                            <constraint firstItem="LKp-Yt-PcO" firstAttribute="top" secondItem="24G-22-zs0" secondAttribute="bottom" constant="5" id="FLf-XI-KJZ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="LKp-Yt-PcO" secondAttribute="bottom" constant="10" id="MPr-q6-Peg"/>
+                            <constraint firstItem="c2R-kw-LZc" firstAttribute="top" secondItem="2Ts-gM-bOo" secondAttribute="bottom" constant="20" id="MQl-O1-p7S"/>
                             <constraint firstItem="fXV-va-NSx" firstAttribute="top" secondItem="aEx-MM-yEq" secondAttribute="bottom" constant="30" id="MVa-hi-FlI"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ePg-cg-Ufn" secondAttribute="trailing" constant="10" id="N27-Kd-he0"/>
                             <constraint firstItem="2Ts-gM-bOo" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Nmp-Bj-NDi"/>
@@ -142,12 +177,15 @@ MS5TbGlkZSB0aGUgc2VlayBiYXIuERERERERERENMi5UYXAgW1NlbmQgdmFsdWUgdG8gVGVsbG9dA
                             <constraint firstItem="pd1-RS-63x" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Uyo-u4-L0L"/>
                             <constraint firstItem="IMb-7v-o9n" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="WX8-5u-tu5"/>
                             <constraint firstItem="aEx-MM-yEq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bsV-gz-tDf"/>
+                            <constraint firstItem="qcq-nn-yqr" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="dwO-3D-6fx"/>
                             <constraint firstItem="IMb-7v-o9n" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="fVg-gj-T3w"/>
                             <constraint firstItem="2Ts-gM-bOo" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="foJ-9j-Bm8"/>
                             <constraint firstItem="ePg-cg-Ufn" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="lIh-RD-6I4"/>
                             <constraint firstItem="fXV-va-NSx" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ocF-vS-m7p"/>
+                            <constraint firstItem="24G-22-zs0" firstAttribute="top" secondItem="qcq-nn-yqr" secondAttribute="bottom" constant="5" id="pvX-ox-70L"/>
                             <constraint firstItem="2Ts-gM-bOo" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="qfW-1x-PSd"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="2Ts-gM-bOo" secondAttribute="trailing" constant="16" id="r4c-nt-Ddn"/>
+                            <constraint firstItem="pd1-RS-63x" firstAttribute="top" secondItem="c2R-kw-LZc" secondAttribute="bottom" constant="30" id="sit-PY-vgn"/>
                             <constraint firstItem="ePg-cg-Ufn" firstAttribute="top" secondItem="aEx-MM-yEq" secondAttribute="bottom" constant="10" id="uPl-hC-4KL"/>
                             <constraint firstItem="4Dv-Vk-jBp" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="vmc-UI-NEm"/>
                             <constraint firstItem="IMb-7v-o9n" firstAttribute="top" secondItem="4Dv-Vk-jBp" secondAttribute="bottom" id="xY2-8Y-vaR"/>
@@ -159,7 +197,10 @@ MS5TbGlkZSB0aGUgc2VlayBiYXIuERERERERERENMi5UYXAgW1NlbmQgdmFsdWUgdG8gVGVsbG9dA
                         <outlet property="_labelAlart" destination="ePg-cg-Ufn" id="IvK-aZ-Ywo"/>
                         <outlet property="_labelCurrentAlt" destination="aEx-MM-yEq" id="6GA-Xs-YKU"/>
                         <outlet property="_labelNewAlt" destination="LPo-j0-dWV" id="R3c-r8-GuF"/>
+                        <outlet property="_labelRegion" destination="24G-22-zs0" id="fIM-Gk-F6A"/>
+                        <outlet property="_labelSSID" destination="qcq-nn-yqr" id="Cgx-G9-ygK"/>
                         <outlet property="_labelUsage" destination="fXV-va-NSx" id="ri2-HU-u6n"/>
+                        <outlet property="_labelVersion" destination="LKp-Yt-PcO" id="EL2-ph-VcG"/>
                         <outlet property="_segUnitType" destination="c2R-kw-LZc" id="3TX-1M-b5b"/>
                         <outlet property="_sliderAlt" destination="2Ts-gM-bOo" id="M6h-oc-2da"/>
                     </connections>
